modified cart model & routes & swagger
